--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>hello</h1>
+    <p>daner longadu primary school.</p>
+    <input type="text">
+    <br>
+    <button>click me</button>
 </body>
 </html>
