--- a/index.html
+++ b/index.html
@@ -4,6 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+      input:focus{
+          font-size: 20px;
+          color: brown;
+      }
+      ul li{
+          list-style: none;
+      }
+      li:nth-child(2n)
+      {
+          background-color: brown;
+      }
+      li:nth-child(2n+1):hover{
+          background-color: chartreuse;
+      }
+      a:visited{
+       color: red;
+      }
+      a{
+          color: rosybrown;
+      }
+    </style>
 </head>
 <body>
     <h1>hello</h1>
@@ -11,5 +33,18 @@
     <input type="text">
     <br>
     <button>click me</button>
+    <ul>
+        <li>hello</li>
+        <li>hello</li>
+        <li>hello</li>
+        <li>hello</li>
+        <li>hello</li>
+        <li>hello</li>
+        <li>hello</li>
+        <li>hello</li>
+    </ul>
+    <a href="https://www.google.com/search?client=firefox-b-d&q=google.com">Google</a>
+    <a href="https://www.youtube.com/">youtube</a>
+    <a href="whatsup.com">hello</a>
 </body>
 </html>
